Refacotring and added "Single"

--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -7,7 +7,7 @@
     <MudAppBar Color="Color.Transparent" Elevation="0" Dense="true">
         <MudText Typo="Typo.h4">LINQ Marbles</MudText>
         <MudSpacer/>
-        <MudText>Interactive Diagrams for <b>LINQ</b></MudText>
+        <MudButton StartIcon="@Icons.Custom.Brands.GitHub" Href="https://github.com/linkdotnet/LINQMarbles" Target="_blank">GitHub</MudButton>
         </MudAppBar>
     <MudDrawer Open="@true" ClipMode="DrawerClipMode.Docked" Elevation="0" Breakpoint="Breakpoint.Lg">
         <NavMenu></NavMenu>
