--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -1,3 +1,5 @@
 ﻿<MudNavGroup Title="Operators" Expanded="@true">
     <MudNavLink Href="/where">Where</MudNavLink>
+    <MudNavLink Href="/select">Select</MudNavLink>
+    <MudNavLink Href="/single">Single</MudNavLink>
 </MudNavGroup>
