--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -2,4 +2,5 @@
     <MudNavLink Href="/where">Where</MudNavLink>
     <MudNavLink Href="/select">Select</MudNavLink>
     <MudNavLink Href="/single">Single</MudNavLink>
+    <MudNavLink Href="/single-or-default">SinglOrDefault</MudNavLink>
 </MudNavGroup>
