--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -4,3 +4,6 @@
     <MudNavLink Href="/single">Single</MudNavLink>
     <MudNavLink Href="/single-or-default">SinglOrDefault</MudNavLink>
 </MudNavGroup>
+<MudNavGroup Title="Info">
+    <MudNavLink Href="https://github.com/linkdotnet/LINQMarbles" Target="_blank">Source code</MudNavLink>
+</MudNavGroup>
