--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -2,7 +2,7 @@
     <MudNavLink Href="/where">Where</MudNavLink>
     <MudNavLink Href="/select">Select</MudNavLink>
     <MudNavLink Href="/single">Single</MudNavLink>
-    <MudNavLink Href="/single-or-default">SinglOrDefault</MudNavLink>
+    <MudNavLink Href="/single-or-default">SingleOrDefault</MudNavLink>
 </MudNavGroup>
 <MudNavGroup Title="Info">
     <MudNavLink Href="https://github.com/linkdotnet/LINQMarbles" Target="_blank">Source code</MudNavLink>
