--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -3,6 +3,10 @@
     <MudNavLink Href="/select">Select</MudNavLink>
     <MudNavLink Href="/single">Single</MudNavLink>
     <MudNavLink Href="/single-or-default">SingleOrDefault</MudNavLink>
+    <MudNavLink Href="/order">Order</MudNavLink>
+    <MudNavLink Href="/order-descending">OrderDescending</MudNavLink>
+    <MudNavLink Href="/chunk">Chunk</MudNavLink>
+    <MudNavLink Href="/sequence-equals">SequenceEquals</MudNavLink>
 </MudNavGroup>
 <MudNavGroup Title="Info">
     <MudNavLink Href="https://github.com/linkdotnet/LINQMarbles" Target="_blank">Source code</MudNavLink>
