--- a/wwwroot/app.css
+++ b/wwwroot/app.css
@@ -1,39 +1,24 @@
-html, body {
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-}
-
-h1:focus {
-    outline: none;
-}
-
 .marbles-card {
     width: 95%;
     margin: auto;
     text-align: center;
 }
-
-.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
-}
-
-.content {
-    padding-top: 1.1rem;
-}
-
-.valid.modified:not([type=checkbox]) {
-    outline: 1px solid #26b050;
-}
-
-.invalid {
-    outline: 1px solid red;
-}
-
-.validation-message {
-    color: red;
-}
-
 .function {
     font-family: monospace !important;
+}
+
+.array {
+    font-weight: bolder;
+    font-size: 1.5rem;
+    margin-right: 1rem;
+}
+
+.array::before {
+    content: '[';
+}
+
+.array::after {
+    content: ']';
 }
 
 #blazor-error-ui {
