Added Any/All and renaming

--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -5,6 +5,7 @@
 
 <MudLayout>
     <MudAppBar Color="Color.Transparent" Elevation="0" Dense="true">
+        <MudImage Src="favicon.png" Alt="logo"  Width="30"/>
         <MudText Typo="Typo.h4">LINQ Marbles</MudText>
         <MudSpacer/>
         <MudButton StartIcon="@Icons.Custom.Brands.GitHub" Href="https://github.com/linkdotnet/LINQMarbles" Target="_blank">GitHub</MudButton>
