--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -7,6 +7,8 @@
     <MudNavLink Href="/order-descending">OrderDescending</MudNavLink>
     <MudNavLink Href="/chunk">Chunk</MudNavLink>
     <MudNavLink Href="/sequence-equals">SequenceEquals</MudNavLink>
+    <MudNavLink Href="/any">Any</MudNavLink>
+    <MudNavLink Href="/all">All</MudNavLink>
 </MudNavGroup>
 <MudNavGroup Title="Info">
     <MudNavLink Href="https://github.com/linkdotnet/LINQMarbles" Target="_blank">Source code</MudNavLink>
