--- a/Components/Pages/Single.razor
+++ b/Components/Pages/Single.razor
@@ -27,14 +27,14 @@
         </div>
         <MudStack>
             <MudDivider/>
-            <MudText Typo="Typo.h6">Exception:</MudText>
+            <MudText Typo="Typo.h6" Inline="true">Exception:</MudText>
             <MudText Typo="Typo.subtitle1" Style="text-align: left">@context.Message</MudText>
         </MudStack>
     </ErrorPanel>
 </PageContainer>
 
 @code {
-    private readonly List<MarbleModel> _marbles = new()
+    private readonly List<MarbleNumberModel> _marbles = new()
     {
         new(1),
         new(2), 
@@ -47,7 +47,7 @@
     
     private void AddNumber()
     {
-        _marbles.Add(new MarbleModel(_number));
+        _marbles.Add(new MarbleNumberModel(_number));
         _number = 0;
         _showPopover = false;
     }
