--- a/Components/Pages/Any.razor
+++ b/Components/Pages/Any.razor
@@ -1,6 +1,6 @@
-﻿@page "/select"
+﻿@page "/any"
 
-<PageContainer OperatorText="Select(n => n * 2)">
+<PageContainer OperatorText="Any(n => n > 4)">
     <InputPanel>
         @foreach (var marble in _marbles)
         {
@@ -19,12 +19,10 @@
         </Marble>
     </InputPanel>
     <OutputPanel>
-        @foreach (var marble in _marbles)
-        {
-            <Marble Color="marble.Color">@(marble.Number * 2)</Marble>
-        }
+        <MudText Typo="Typo.h4">@_marbles.Any(n => n.Number > 4)</MudText>
     </OutputPanel>
 </PageContainer>
+
 @code {
     private readonly List<MarbleNumberModel> _marbles = new()
     {
@@ -36,7 +34,7 @@
 
     private bool _showPopover;
     private int _number = 5;
-    
+
     private void AddNumber()
     {
         _marbles.Add(new MarbleNumberModel(_number));
