--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -9,6 +9,15 @@
     <MudNavLink Href="/sequence-equals">SequenceEquals</MudNavLink>
     <MudNavLink Href="/any">Any</MudNavLink>
     <MudNavLink Href="/all">All</MudNavLink>
+    <MudNavLink Href="/count">Count</MudNavLink>
+    <MudNavLink Href="/sum">Sum</MudNavLink>
+    <MudNavLink Href="/average">Average</MudNavLink>
+    <MudNavLink Href="/aggregate">Aggregate</MudNavLink>
+    <MudNavLink Href="/min">Min</MudNavLink>
+    <MudNavLink Href="/min-by">MinBy</MudNavLink>
+    <MudNavLink Href="/max">Max</MudNavLink>
+    <MudNavLink Href="/max-by">MaxBy</MudNavLink>
+    <MudNavLink Href="/group-by">GroupBy</MudNavLink>
 </MudNavGroup>
 <MudNavGroup Title="Info">
     <MudNavLink Href="https://github.com/linkdotnet/LINQMarbles" Target="_blank">Source code</MudNavLink>
