Intersect, Join, Union

--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -18,6 +18,9 @@
     <MudNavLink Href="/max">Max</MudNavLink>
     <MudNavLink Href="/max-by">MaxBy</MudNavLink>
     <MudNavLink Href="/group-by">GroupBy</MudNavLink>
+    <MudNavLink Href="/union">Union</MudNavLink>
+    <MudNavLink Href="/intersect">Intersect</MudNavLink>
+    <MudNavLink Href="/join">Join</MudNavLink>
 </MudNavGroup>
 <MudNavGroup Title="Info">
     <MudNavLink Href="https://github.com/linkdotnet/LINQMarbles" Target="_blank">Source code</MudNavLink>
