Don't break even on small screens

--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -10,7 +10,7 @@
         <MudSpacer/>
         <MudButton StartIcon="@Icons.Custom.Brands.GitHub" Href="https://github.com/linkdotnet/LINQMarbles" Target="_blank">GitHub</MudButton>
     </MudAppBar>
-    <MudDrawer Open="@true" ClipMode="DrawerClipMode.Docked" Elevation="0" Breakpoint="Breakpoint.Lg">
+    <MudDrawer Open="@true" ClipMode="DrawerClipMode.Docked" Elevation="0">
         <NavMenu></NavMenu>
     </MudDrawer>
     <MudContainer Style="display: flex; flex-direction: column; height: 100vh;">
