Make MaxBy/MinBy interactive

--- a/Components/Pages/Join.razor
+++ b/Components/Pages/Join.razor
@@ -98,6 +98,7 @@
         var content = split[1];
         
         _marbles1.Add(new MarbleMultiModel(number, content));
+        _showPopover1 = false;
     }
     
     private void AddNewContentToList2()
@@ -112,5 +113,6 @@
         var content = split[1];
         
         _marbles2.Add(new MarbleMultiModel(number, content));
+        _showPopover2 = false;
     }
 }
