--- a/Components/Pages/Join.razor
+++ b/Components/Pages/Join.razor
@@ -2,14 +2,14 @@
 
 <PageContainer>
     <OperatorPanel>
-<MudText Typo="Typo.h6" Style="text-align: left" Class="function">
-    Join(
-    <br />&nbsp;&nbsp;marbles2, 
-    <br />&nbsp;&nbsp;item1 => item1.Number, 
-    <br />&nbsp;&nbsp;item2 => item2.Number,
-    <br />&nbsp;&nbsp;(item1, item2) => new { item1.Number, Letter = item1.Letter + item2.Letter }
-    <br />)
-</MudText>
+        <MudText Typo="Typo.h6" Class="function">
+            Join(
+            <br />&nbsp;&nbsp;marbles2, 
+            <br />&nbsp;&nbsp;item1 => item1.Number, 
+            <br />&nbsp;&nbsp;item2 => item2.Number,
+            <br />&nbsp;&nbsp;(item1, item2) => new { item1.Number, Letter = item1.Letter + item2.Letter }
+            <br />)
+        </MudText>
 
     </OperatorPanel>
     <InputPanel>
