Added Zip and reverted some changes

--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -21,6 +21,7 @@
     <MudNavLink Href="/union">Union</MudNavLink>
     <MudNavLink Href="/intersect">Intersect</MudNavLink>
     <MudNavLink Href="/join">Join</MudNavLink>
+    <MudNavLink Href="/zip">Zip</MudNavLink>
 </MudNavGroup>
 <MudNavGroup Title="Info">
     <MudNavLink Href="https://github.com/linkdotnet/LINQMarbles" Target="_blank">Source code</MudNavLink>
