--- a/Components/Pages/Aggregate.razor
+++ b/Components/Pages/Aggregate.razor
@@ -2,7 +2,7 @@
 
 <PageContainer>
     <OperatorPanel>
-        <MudText Typo="Typo.h6" Class="function">
+        <MudText Typo="Typo.h6" Style="text-align: left" Class="function">
             Aggregate(
             <br/>&nbsp;&nbsp;1, (total, next) => total * next)
         </MudText>
