--- a/Components/Pages/Zip.razor
+++ b/Components/Pages/Zip.razor
@@ -1,13 +1,15 @@
-﻿@page "/join"
+﻿@page "/zip"
 
 <PageContainer>
     <OperatorPanel>
         <MudText Typo="Typo.h6" Style="text-align: left" Class="function">
-            Join(
+            Zip(
             <br />&nbsp;&nbsp;marbles2, 
-            <br />&nbsp;&nbsp;item1 => item1.Number, 
-            <br />&nbsp;&nbsp;item2 => item2.Number,
-            <br />&nbsp;&nbsp;(item1, item2) => new { item1.Number, Letter = item1.Letter + item2.Letter }
+            <br />&nbsp;&nbsp;(item1, item2) => new 
+            <br />&nbsp;&nbsp;{ 
+            <br />&nbsp;&nbsp;&nbsp;&nbsp;Number = $"{item1.Number}:{item2.Number}",
+            <br />&nbsp;&nbsp;&nbsp;&nbsp;Letter = item1.Letter + item2.Letter
+            <br />&nbsp;&nbsp;}
             <br />)
         </MudText>
 
@@ -51,16 +53,17 @@
         </div>
     </InputPanel>
     <OutputPanel>
-        <div class="centered-content">
-            @foreach (var joined in _marbles1.Join(
-                _marbles2,
-                item1 => item1.Number,
-                item2 => item2.Number,
-                (item1, item2) => new { item1.Number, item1.Color, Content = item1.Content + item2.Content }))
+        @foreach (var zipped in _marbles1.Zip(
+            _marbles2,
+            (item1, item2) => new
             {
-                <Marble Color="joined.Color">@joined.Number,@joined.Content</Marble>
-            }
-        </div>
+                Number = $"{item1.Number}:{item2.Number}",
+                item1.Color,
+                Content = item1.Content + item2.Content
+            }))
+        {
+            <Marble Color="zipped.Color">@zipped.Number,@zipped.Content</Marble>
+        }
     </OutputPanel>
 </PageContainer>
 
@@ -69,16 +72,11 @@
     {
         new(1, "A"),
         new(2, "D"), 
-        new(3, "C"), 
-        new(4, "B")
     };
     
     private readonly List<MarbleMultiModel> _marbles2 = new()
     {
-        new(1, "C"),
-        new(2, "D"), 
-        new(3, "B"), 
-        new(4, "A")
+        new(3, "C"),
     };
     
     private bool _showPopover1;
