--- a/Components/Pages/GroupBy.razor
+++ b/Components/Pages/GroupBy.razor
@@ -6,18 +6,7 @@
         {
             <Marble Color="marble.Color">@marble.Number,@marble.Content</Marble>
         }
-        <Marble Color="@Color.Primary" Clicked="@(() => _showPopover = true)">
-            <span>+</span>
-            <MudPopover Open="@_showPopover" AnchorOrigin="Origin.BottomRight">
-                <div class="d-flex flex-column">
-                    <MudInput T="string" @bind-Value="@_content" 
-                              AdornmentIcon="@Icons.Material.Filled.Add"
-                              Adornment="Adornment.Start"
-                              Required="true"
-                              OnAdornmentClick="AddNewContent"/>
-                </div>
-            </MudPopover>
-        </Marble>
+        <AddMarble OnAdd="AddNewContent" T="string" />
     </InputPanel>
     <OutputPanel>
         <div class="centered-content">
@@ -44,13 +33,10 @@
         new(3, "A"), 
         new(4, "B")
     };
-    
-    private bool _showPopover;
-    private string _content = "1,A";
 
-    private void AddNewContent()
+    private void AddNewContent(string input)
     {
-        var split = _content.Split(',', StringSplitOptions.TrimEntries | StringSplitOptions.RemoveEmptyEntries);
+        var split = input.Split(',', StringSplitOptions.TrimEntries | StringSplitOptions.RemoveEmptyEntries);
         if (split.Length != 2)
         {
             return;
