--- a/Components/Pages/OrderDescending.razor
+++ b/Components/Pages/OrderDescending.razor
@@ -6,17 +6,7 @@
         {
             <Marble Color="marble.Color">@marble.Number</Marble>
         }
-        <Marble Color="@Color.Primary" Clicked="@(() => _showPopover = true)">
-            <span>+</span>
-            <MudPopover Open="@_showPopover" AnchorOrigin="Origin.BottomRight">
-                <div class="d-flex flex-column">
-                    <MudInput T="int" @bind-Value="@_number" 
-                              AdornmentIcon="@Icons.Material.Filled.Add"
-                              Adornment="Adornment.Start" 
-                              OnAdornmentClick="AddNumber"/>
-                </div>
-            </MudPopover>
-        </Marble>
+        <AddMarble DefaultContent="5" OnAdd="AddNumber" T="int" />
     </InputPanel>
     <OutputPanel>
         @foreach (var marble in _marbles.OrderByDescending(m => m.Number))
@@ -35,13 +25,8 @@
         new(4)
     };
 
-    private bool _showPopover;
-    private int _number = 5;
-
-    private void AddNumber()
+    private void AddNumber(int number)
     {
-        _marbles.Add(new MarbleNumberModel(_number));
-        _number = 0;
-        _showPopover = false;
+        _marbles.Add(new MarbleNumberModel(number));
     }
 }
