--- a/Components/Pages/Chunk.razor
+++ b/Components/Pages/Chunk.razor
@@ -4,7 +4,10 @@
     <InputPanel>
         @foreach (var marble in _marbles)
         {
-            <Marble Color="marble.Color">@marble.Number</Marble>
+            <Marble Color="marble.Color"
+                    Close="@(() => _marbles.Remove(marble))">
+                @marble.Number
+            </Marble>
         }
         <AddMarble DefaultContent="5" OnAdd="AddNumber" T="int" />
     </InputPanel>
@@ -19,6 +22,16 @@
             </div>
         }
     </OutputPanel>
+    <ErrorPanel>
+        <div>
+            <Marble Color="Color.Error"><MudIcon Icon="@Icons.Material.Filled.ElectricBolt"></MudIcon></Marble>
+        </div>
+        <MudStack>
+            <MudDivider/>
+            <MudText Typo="Typo.h6" Inline="true">Exception:</MudText>
+            <MudText Typo="Typo.subtitle1" Style="text-align: left">@context.Message</MudText>
+        </MudStack>
+    </ErrorPanel>
 </PageContainer>
 
 @code {
