--- a/Components/Pages/Single.razor
+++ b/Components/Pages/Single.razor
@@ -3,7 +3,10 @@
     <InputPanel>
          @foreach (var marble in _marbles)
          {
-             <Marble Color="marble.Color">@marble.Number</Marble>
+             <Marble Color="marble.Color"
+                     Close="@(() => _marbles.Remove(marble))">
+                 @marble.Number
+             </Marble>
          }
          <AddMarble DefaultContent="5" OnAdd="AddNumber" T="int"></AddMarble>
     </InputPanel>
