--- a/Components/Pages/Zip.razor
+++ b/Components/Pages/Zip.razor
@@ -18,7 +18,10 @@
         <div class="array">
             @foreach (var marble in _marbles1)
             {
-                <Marble Color="marble.Color">@marble.Number,@marble.Content</Marble>
+                <Marble Color="marble.Color"
+                        Close="@(() => _marbles1.Remove(marble))">
+                    @marble.Number,@marble.Content
+                </Marble>
             }
             <AddMarble DefaultContent='"1,A"' OnAdd="AddNewContentToList1" T="string"/>
         </div>
