--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -5,13 +5,24 @@
 
 <MudLayout>
     <MudAppBar Color="Color.Transparent" Elevation="0" Dense="true">
-        <MudImage Src="favicon.png" Alt="logo"  Width="30"/>
-        <MudText Typo="Typo.h4">LINQ Marbles</MudText>
+        <MudHidden Breakpoint="Breakpoint.MdAndUp">
+            <MudIconButton Icon="@Icons.Material.Filled.Menu" Edge="Edge.Start" Color="Color.Inherit" OnClick="@(() => _drawerOpen = !_drawerOpen)"/>
+        </MudHidden>
+        <MudImage Src="favicon.png" Alt="logo" Width="30"/>
+        <MudHidden Breakpoint="Breakpoint.MdAndDown">
+            <MudText Typo="Typo.h4">LINQ Marbles</MudText>
+        </MudHidden>
         <MudSpacer/>
         <MudButton StartIcon="@Icons.Custom.Brands.GitHub" Href="https://github.com/linkdotnet/LINQMarbles" Target="_blank">GitHub</MudButton>
     </MudAppBar>
-    <MudDrawer Open="@true" ClipMode="DrawerClipMode.Docked" Elevation="0">
-        <NavMenu></NavMenu>
+    <MudDrawer DisableOverlay="true" Open="@true" ClipMode="DrawerClipMode.Docked" Elevation="0" Breakpoint="Breakpoint.Lg">
+        <NavMenu/>
+    </MudDrawer>
+    <MudDrawer @bind-Open="@_drawerOpen" DisableOverlay="true" Variant="DrawerVariant.Temporary" Breakpoint="Breakpoint.Md">
+        <MudDrawerHeader>
+            <MudText Typo="Typo.h6">LINQ Marbles</MudText>
+        </MudDrawerHeader>
+        <NavMenu/>
     </MudDrawer>
     <MudContainer Style="display: flex; flex-direction: column; height: 100vh;">
         <MudMainContent Style="flex-grow: 1;">
@@ -23,3 +34,7 @@
         </footer>
     </MudContainer>
 </MudLayout>
+
+@code {
+    private bool _drawerOpen;
+}
