--- a/Components/AddMarble.razor
+++ b/Components/AddMarble.razor
@@ -7,7 +7,7 @@
             <MudInput T="T" @bind-Value="@DefaultContent" 
                       AdornmentIcon="@Icons.Material.Filled.Add"
                       Adornment="Adornment.Start"
-                      OnKeyDown="CallOnAddWhenEnter"
+                      OnKeyUp="CallOnAddWhenEnter"
                       Required="true"
                       OnAdornmentClick="AddNewContent"
                       @ref="_input"/>
