Added Except, First(OrDefault), Skip and Take

--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -3,6 +3,8 @@
     <MudNavLink Href="/select">Select</MudNavLink>
     <MudNavLink Href="/single">Single</MudNavLink>
     <MudNavLink Href="/single-or-default">SingleOrDefault</MudNavLink>
+    <MudNavLink Href="/first">First</MudNavLink>
+    <MudNavLink Href="/first-or-default">FirstOrDefault</MudNavLink>
     <MudNavLink Href="/order">Order</MudNavLink>
     <MudNavLink Href="/order-descending">OrderDescending</MudNavLink>
     <MudNavLink Href="/chunk">Chunk</MudNavLink>
@@ -20,8 +22,11 @@
     <MudNavLink Href="/group-by">GroupBy</MudNavLink>
     <MudNavLink Href="/union">Union</MudNavLink>
     <MudNavLink Href="/intersect">Intersect</MudNavLink>
+    <MudNavLink Href="/except">Except</MudNavLink>
     <MudNavLink Href="/join">Join</MudNavLink>
     <MudNavLink Href="/zip">Zip</MudNavLink>
+    <MudNavLink Href="/skip">Skip</MudNavLink>
+    <MudNavLink Href="/take">Take</MudNavLink>
 </MudNavGroup>
 <MudNavGroup Title="Info">
     <MudNavLink Href="https://github.com/linkdotnet/LINQMarbles" Target="_blank">Source code</MudNavLink>
