Renamed wrongly named operator

--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -8,7 +8,7 @@
     <MudNavLink Href="/order">Order</MudNavLink>
     <MudNavLink Href="/order-descending">OrderDescending</MudNavLink>
     <MudNavLink Href="/chunk">Chunk</MudNavLink>
-    <MudNavLink Href="/sequence-equals">SequenceEquals</MudNavLink>
+    <MudNavLink Href="/sequence-equal">SequenceEqual</MudNavLink>
     <MudNavLink Href="/any">Any</MudNavLink>
     <MudNavLink Href="/all">All</MudNavLink>
     <MudNavLink Href="/count">Count</MudNavLink>
