Added Last(orDefault) and made GroupBy in Row

--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -5,6 +5,8 @@
     <MudNavLink Href="/single-or-default">SingleOrDefault</MudNavLink>
     <MudNavLink Href="/first">First</MudNavLink>
     <MudNavLink Href="/first-or-default">FirstOrDefault</MudNavLink>
+    <MudNavLink Href="/last">Last</MudNavLink>
+    <MudNavLink Href="/last-or-default">LastOrDefault</MudNavLink>
     <MudNavLink Href="/order">Order</MudNavLink>
     <MudNavLink Href="/order-descending">OrderDescending</MudNavLink>
     <MudNavLink Href="/chunk">Chunk</MudNavLink>
