--- a/wwwroot/app.css
+++ b/wwwroot/app.css
@@ -11,7 +11,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-direction: column;
+    flex-direction: row;
 }
 
 .array {
