--- a/Components/Pages/MinBy.razor
+++ b/Components/Pages/MinBy.razor
@@ -13,7 +13,10 @@
     </InputPanel>
     <OutputPanel>
         @{ var marble = _marbles.MinBy(m => m.Content); }
-        <Marble Color="marble.Color">@marble.Number,@marble.Content</Marble>
+        @if (marble is not null)
+        {
+            <Marble Color="marble.Color">@marble.Number,@marble.Content</Marble>
+        }
     </OutputPanel>
 </PageContainer>
 
