--- a/wwwroot/app.css
+++ b/wwwroot/app.css
@@ -5,6 +5,8 @@
 }
 .function {
     font-family: monospace !important;
+    max-width: 100%;
+    font-size: 3vw !important;
 }
 
 .centered-content {
