--- a/Components/Pages/Max.razor
+++ b/Components/Pages/Max.razor
@@ -12,8 +12,22 @@
         <AddMarble DefaultContent="5" OnAdd="AddNumber" T="int" />
     </InputPanel>
     <OutputPanel>
-        <MudText Typo="Typo.h4">@_marbles.MaxBy(s => s.Number)!.Number</MudText>
-    </OutputPanel>
+            @{
+                var number = _marbles.Select(x => x.Number).Max();
+                var marble = _marbles.First(x => x.Number == number);
+            }
+            <Marble Color="marble.Color">@marble.Number</Marble> 
+        </OutputPanel>
+        <ErrorPanel>
+            <div>
+            <Marble Color="Color.Error"><MudIcon Icon="@Icons.Material.Filled.ElectricBolt"></MudIcon></Marble>
+            </div>
+            <MudStack>
+                <MudDivider/>
+                <MudText Typo="Typo.h6" Inline="true">Exception:</MudText>
+                <MudText Typo="Typo.subtitle1" Style="text-align: left">@context.Message</MudText>
+            </MudStack>
+        </ErrorPanel>
 </PageContainer>
 
 @code {
