--- a/Components/Pages/MaxBy.razor
+++ b/Components/Pages/MaxBy.razor
@@ -12,8 +12,15 @@
         <AddMarble DefaultContent='"1,A"' OnAdd="AddNewContentToList" T="string" />
     </InputPanel>
     <OutputPanel>
-        @{ var marble = _marbles.MaxBy(m => m.Content)!; }
-        <Marble Color="marble.Color">@marble.Number,@marble.Content</Marble>
+        @{ var marble = _marbles.MaxBy(m => m.Content); }
+        @if (marble is not null)
+        {
+            <Marble Color="marble.Color">@marble.Number,@marble.Content</Marble>
+        }
+        else 
+        {
+            <Marble Color="Color.Info">null</Marble>
+        }
     </OutputPanel>
     <ErrorPanel>
         <p>@context.Message</p>
