--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -30,6 +30,7 @@
     <MudNavLink Href="/skip">Skip</MudNavLink>
     <MudNavLink Href="/take">Take</MudNavLink>
     <MudNavLink Href="/concat">Concat</MudNavLink>
+    <MudNavLink Href="/distinct">Distinct</MudNavLink>
 </MudNavGroup>
 <MudNavGroup Title="Info">
     <MudNavLink Href="https://github.com/linkdotnet/LINQMarbles" Target="_blank">Source code</MudNavLink>
