--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -1,6 +1,7 @@
 ﻿<MudNavGroup Title="Operators" Expanded="@true">
     <MudNavLink Href="/where">Where</MudNavLink>
     <MudNavLink Href="/select">Select</MudNavLink>
+    <MudNavLink Href="/select-many">SelectMany</MudNavLink>
     <MudNavLink Href="/single">Single</MudNavLink>
     <MudNavLink Href="/single-or-default">SingleOrDefault</MudNavLink>
     <MudNavLink Href="/first">First</MudNavLink>
